kubernetes/apps/networking/proxmox/manifests/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: proxmox
  namespace: networking
spec:
  ports:
    - protocol: TCP
      port: 8006
      name: https
---
apiVersion: v1
kind: Endpoints
metadata:
  name: proxmox
  namespace: networking
subsets:
  - addresses:
      - ip: 192.168.1.98
      - ip: 192.168.1.99
    ports:
      - port: 8006
