kubernetes/apps/networking/proxmox/manifests/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: proxmox
  namespace: networking
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: nginx-internal
  rules:
  - host: &host proxmox.${SECRET_DOMAIN}
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: proxmox
              port:
                name: https
  tls:
    - hosts:
      - *host
      secretName: wildcard-cert-tls
