kubernetes/apps/networking/proxmox/manifests/route.yaml
# not working yet
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/hostname: proxmox.${SECRET_DOMAIN}
  name: proxmox
  namespace: networking
spec:
  hostnames:
    - proxmox.${SECRET_DOMAIN}
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: cilium-internal
      namespace: infrastructure
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: proxmox
          namespace: networking
          port: 8006
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
